lab1/Test/L1-A-4-45.cmm
struct LVm6KKmNTMWTzjrz2Juf {
  int oUs7oomszVE1C [ 2122437670 ] ;
};
float ( ) {
  = - LHu / L / hrviu - jQ_dmT + S5O33 - J3lcQze9Jf_TJQMw8g 
    + NK > Gcwjc0mG_2YtFXER0nj && JrpufqNbt || DGPbln 
    ;
}
float ( ) {
  if ( ZkkfzLytek2B5o else )   Vb ;
else   if ( hvgJAugx6jNw7Rf )   if ( , MB0dWa36uPl43pAv6GXM 
    )   VLrfICSiEQ0aWW_eoI7N 



  if ( LZvEV2BHxZYWw )   if ( bcrI27lONe8VH )   if 
    ( vJ6K8YFyrAIBg2 )   if ( vQ3wkEkm )   NvV1mhM_T ;




}
int c0zXQLd89qLFLZe0 [ ] , Cb , ywqJqsvYsfs 


;
